Fixed list overflow

--- a/client/src/components/List/style.scss
+++ b/client/src/components/List/style.scss
@@ -3,6 +3,7 @@
 .list {
     width: 100%;
     margin-top: 10px;
+    overflow: hidden;
 
     .listtitle {
         display: inline-block;
